# 3D-Renderer

./: build.bat  run.bat  test.bat
src/: CMakeLists.txt  Color.cpp  Color.hpp  Geometry.cpp  Geometry.hpp  Light.cpp  Light.hpp  Raytracer.cpp  Raytracer.hpp  SDL_Handler.cpp  SDL_Handler.hpp  Vector.hpp  main.cpp
tests/: CMakeLists.txt  Tests.cpp
